--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,87 @@
-/* Aula inicial :D */
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body{
     background-image: url('http://1.bp.blogspot.com/-w8SoHaE1ce0/VYQdarfd_iI/AAAAAAAAUjc/NDJCMeAW4YA/s1600/Slide-12.png');
     background-size: auto 100vh;
     font-family: Arial;
     height: 100vh;
+    font-size: 12px;
   }
+
+/* se a tela tiver pelo menos 400px vai carregar estes estilos*/
+  @media(min-width:400px){
+  body{
+    font-size: 14px;
+  }
+}
+
+@media(min-width:600px){
+  body{
+    font-size: 18px;
+  }
+}
+
+header{
+  height: 100vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
   
-  .menu{
+}  
+  
+.menu{
     background-color: white;
+    position: fixed;
+    width: 100vw;
+    top: 0;
   }
   
-  .menu ul{
+.menu ul{
     display:flex;
     justify-content:space-around;
   }
   
-  .menu li{
+.menu li{
     list-style:none;
     
   }
+
+.menu a{
+  display: block;
+  padding: 10px 20px;
+}
   
-  a{
+a{
     color:teal;
     text-decoration: none;
     
   }
   
-  a:hover{
+a:hover{
     text-decoration:underline;
   }
   
-  .site-subtitle,
-  .site-title{
+.site-subtitle,
+.site-title{
     color:whitesmoke;
     text-align:center;
   }
+
+.site-title{
+  font-size: 4em;
+}
   
-  .site-subtitle{
+.site-subtitle{
     font-style:italic;
   }
+.img-portfolio{
+  height: 180px;
+  width: 180px;
+}
+
   
   
