--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body{
     background-image: url('http://1.bp.blogspot.com/-w8SoHaE1ce0/VYQdarfd_iI/AAAAAAAAUjc/NDJCMeAW4YA/s1600/Slide-12.png');
     background-size: auto 100vh;
-    font-family: Arial;
+    font-family: 'Roboto Mono', monospace;
     height: 100vh;
     font-size: 12px;
   }
@@ -30,6 +30,8 @@ header{
   display:flex;
   justify-content: center;
   align-items: center;
+  background-image: url("https://i.pinimg.com/564x/64/92/77/6492778872455eee10cbb314fc36863f.jpg");
+  background-size: auto auto;
   
 }  
   
@@ -73,14 +75,69 @@ a:hover{
 
 .site-title{
   font-size: 4em;
+  font-family: 'Press Start 2P', cursive;
 }
   
 .site-subtitle{
     font-style:italic;
+    font-family: 'Cinzel', serif;
   }
+
+.portifolio{
+  padding: 2em;
+  height: 100vh;
+}
+
+.portifolio h2{
+  font-family: 'Roboto Mono', monospace;
+  color: whitesmoke;
+  margin-bottom: 1.5em;
+  font-size: 2em;
+}
+
+.portifolio .grid{
+  display: grid;
+  gap: 2em;
+ 
+}
+
+@media(min-width: 560px){
+  .portifolio .grid{
+    grid-template-columns: 240px 240px;
+  
+  }
+
+}
+
+@media(min-width: 880px){
+  .portifolio .grid{
+    grid-template-columns: 260px 260px 260px;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 4em - 48px - 1.5em);
+  
+  }
+
+}
+
+.portifolio figure{
+  text-align: center;
+}
+
 .img-portfolio{
   height: 180px;
-  width: 180px;
+  width: 240px;
+  object-fit: cover;
+}
+
+@media(min-width: 1200px ){
+  
+  .img-portfolio{
+    height: auto;
+    width: 100%;
+    object-fit: cover;
+  }
+
 }
 
   
